create the config file added "page parts" dir.

--- a/content/themes/telavice/assets/scss/style.scss
+++ b/content/themes/telavice/assets/scss/style.scss
@@ -9,4 +9,4 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: Telavice
 */
 
-@import "../../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../../../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
