Added sass core files.

--- a/content/themes/telavice/assets/scss/style.scss
+++ b/content/themes/telavice/assets/scss/style.scss
@@ -10,3 +10,8 @@ Text Domain: Telavice
 */
 
 @import "../../../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "variables";
+@import "core";
+@import "header";
+@import "nav";
+@import "nav";
