--- a/content/themes/telavice/assets/scss/_variables.scss
+++ b/content/themes/telavice/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 /* Core Colors */
-$brand-primary : #0077D6;
+$brand-primary : #33558b;
 $brand-accent : #272727;
+$brand-green: #4ecf32;
 
 /* Typography Colors */
 $text-color : #272727;
