--- a/content/themes/telavice/assets/scss/_variables.scss
+++ b/content/themes/telavice/assets/scss/_variables.scss
@@ -1,8 +1,9 @@
 /* Core Colors */
-$brand-primary : #33558b;
-$brand-accent : #272727;
+$brand-primary : #106fc6;
+$brand-accent : #25ABFD;
 $brand-green: #4ecf32;
 
 /* Typography Colors */
 $text-color : #272727;
 $text-white : #ffffff;
+$text-green :  #70f353;
