--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -1,6 +1,7 @@
 #home{
   .feature{
     margin-top: -60px;
+    margin-bottom: -75px;
     padding-top: 97px;
     background: url("/content/uploads/2017/11/online-dr1.jpg") no-repeat right center;
     -webkit-background-size: cover;
@@ -9,20 +10,11 @@
     background-size: cover;
     width: 100%;
     height: 885px;
-    
-    @media (max-width: 1480px) {
-      height: 582px;
-    }
-    @media (max-width: 1250px) {
-      height: 471px
-    }
+    overflow: hidden;
+
+
+
     @media (max-width: 1080px) {
-      height: 400px;
-    }
-    @media (max-width: 880px) {
-     background-position: bottom;
-    }
-    @media (max-width: 768px) {
       background: url("/content/uploads/2017/11/online-dr-m.jpg") no-repeat center;
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -32,20 +24,18 @@
 
     }
     .headings{
+      width:100%;
+      float: left;
       max-width: 600px;
       margin-top: 99px;
 
-      @media (max-width: 1250px) {
-        margin-top: 31px;
-      }
-      @media (max-width: 1020px) {
-        max-width: 500px;
-      }
-      @media (max-width: 768px) {
-        margin: auto;
+      @media (max-width: 1080px) {
+        margin:30px auto;
+        float: none;
+        text-align: center;
       }
       .prime-heading{
-        @media (max-width: 1020px) {
+        @media (max-width: 1080px) {
           font-size: 1.9rem;
         }
         @media (max-width: 550px) {
@@ -54,8 +44,79 @@
       }
       .btn-go{
         margin-top: 60px;
-        @media (max-width: 550px) {
-          margin-top: 30px;
+
+        @media (max-width: 1080px) {
+          margin-top: 130px;
+        }
+      }
+    }
+  }
+  .img-box{
+    img{
+      width: 68%;
+      position: absolute;
+      bottom: 0px;
+      right: -173px;
+
+      @media (max-width: 1500px) {
+        width: 77%;
+        right: -307px;
+      }
+      @media (max-width: 1130px) {
+        width: 93%;
+        right: -477px
+      }
+      @media (max-width: 1080px) {
+        display: none;
+      }
+    }
+
+  }
+  .control-1{
+    img {
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: -57px auto 50px auto;
+      cursor:pointer;
+      z-index: 101;
+    }
+  }
+  .fold-heading{
+    box-shadow: 0px 2px 14px rgba(255, 255, 255, 0.64);
+    background: $brand-primary;
+    text-align: center;
+    color:#ffffff;
+    padding: 20px;
+    font-size: 18px;
+    position: relative;
+    z-index:100;
+
+    h2{
+      font-weight: 100;
+    }
+  }
+  .heros{
+    .service{
+      font-size: 24px;
+      text-align: center;
+
+      .price{
+        font-size: 42px;
+      }
+      .description{
+        position: relative;
+        display: inline-block;
+        top: 2px;
+        line-height: 19px;
+        text-align: left;
+        font-size: 21px;
+
+        .sub-heading{
+          display: block;
+          font-size: 14px;
+          font-weight: bold;
+          color: $text-green;
         }
       }
     }
