--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -1,7 +1,6 @@
 #home{
   .feature{
     margin-top: -60px;
-    margin-bottom: -75px;
     padding-top: 97px;
     background: url("/content/uploads/2017/11/online-dr1.jpg") no-repeat right center;
     -webkit-background-size: cover;
@@ -117,6 +116,59 @@
           font-size: 14px;
           font-weight: bold;
           color: $text-green;
+        }
+      }
+    }
+  }
+  #online-experience{
+
+    .heading{
+      font-size: 3rem;
+      color: $dark-header;
+
+      span{
+        display: block;
+        color:$sub-text-color;
+        font-size: 1.5rem;
+      }
+    }
+    p{
+      font-size: 1.3rem;
+    }
+    img{
+      padding-top: 100px;
+      max-width: 701px;
+      margin: auto;
+      display: block;
+      width:100%;
+    }
+  }
+  #treated-conditions{
+    background: #000000;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+
+    .heading{
+      text-align: center;
+      color: #ffffff;
+      font-size: 3rem;
+    }
+    .box-container{
+      margin-top: 25px;
+
+      .box{
+        width: 25%;
+        float: left;
+        color: #ffffff;
+        padding: 72px 30px;
+        text-align: center;
+
+        &:nth-child(odd){
+          @extend .main-gradient;
+        }
+        &:nth-child(even){
+          @extend .sub-gradient;
         }
       }
     }
