--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -144,10 +144,11 @@
     }
   }
   #treated-conditions{
-    background: #000000;
+    @extend .black-gradient;
     padding-top: 50px;
     padding-bottom: 100px;
     margin-bottom: 100px;
+    border: 1px inset #505050;
 
     .heading{
       text-align: center;
@@ -156,6 +157,10 @@
     }
     .box-container{
       margin-top: 25px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 2px 3px 10px #3b3b3b;
+      border: 1px inset #505050;
 
       .box{
         width: 25%;
