--- a/content/themes/telavice/assets/scss/_variables.scss
+++ b/content/themes/telavice/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
 $brand-primary : #106fc6;
 $brand-accent : #2092d9;
 $brand-green: #4ecf32;
+$brand-gray : #484848;
 
 /* Typography Colors */
 $text-color : #272727;
