Blue feature section

--- a/content/themes/telavice/assets/scss/_variables.scss
+++ b/content/themes/telavice/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 /* Core Colors */
-$brand-primary : #106fc6;
+//$brand-primary : #106fc6;
+$brand-primary : #009FDE;
 $brand-accent : #2092d9;
 $brand-green: #4ecf32;
 $brand-gray : #484848;
