--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -2,7 +2,7 @@
   .feature{
     margin-top: -60px;
     padding-top: 97px;
-    background: url("/content/uploads/2017/11/online-dr1.jpg") no-repeat right center;
+    background: url("/content/uploads/2017/12/online-dr1.jpg") no-repeat right center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,7 +14,7 @@
 
 
     @media (max-width: 1080px) {
-      background: url("/content/uploads/2017/11/online-dr-m.jpg") no-repeat center;
+      background: url("/content/uploads/2017/12/online-dr-m.jpg") no-repeat center;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -144,22 +144,23 @@
     }
   }
   #treated-conditions{
-    @extend .black-gradient;
-    padding-top: 50px;
-    padding-bottom: 100px;
-    border: 1px inset #505050;
+
+    .header{
+      background: $brand-primary;
+      padding: 15px;
+      text-align: center;
+      color: #ffffff;
+      font-size:  3rem;
+    }
 
     .heading{
       text-align: center;
       color: #ffffff;
-      font-size: 3rem;
+      font-size: 2rem;
     }
     .box-container{
-      margin-top: 25px;
-      border-radius: 10px;
       overflow: hidden;
       box-shadow: 2px 3px 10px #3b3b3b;
-      border: 1px inset #505050;
 
       .box{
         width: 25%;
@@ -179,27 +180,30 @@
   }
   #question{
     margin-bottom: 100px;
+
     .header{
-      @extend .main-gradient;
-      color: #ffffff;
-      text-align:center;
+      color: $text-color;
+      text-align: center;
       font-size: 1.7em;
-      padding: 15px 5px;
-      margin-bottom: 50px
+      padding: 15px 5px 20px 5px;
+      margin-bottom: 25px;
+      background: #E7E7E7;
+      border-top: 6px solid #c5c5c5;
     }
     .card{
       background-color: transparent;
       border: none;
+      margin-bottom: 10px;
 
       .card-header{
-        padding-left: 0;
         background-color: transparent;
+        padding: .75rem 1.25rem .35rem 0;
+        margin-bottom: 9px;
       }
       .faqs{
           dt {
             cursor: pointer;
-            padding:17px;
-            margin: 0;
+            margin: 3px 0 0px 0px;
 
             &.collapsed {
               &:before {
@@ -210,44 +214,40 @@
                 transform: rotate(0deg);
                 background: $brand-primary;
                 content: '\f067';
-                padding: 5px 6px 6px 10px;
+                padding: 2px 6px 6px 7px;
                 color: #ffffff;
                 font-family: FontAwesome;
-                width: 33px;
-                height: 33px;
+                width: 28px;
+                height: 28px;
                 display: inline-block;
                 margin-right: 10px;
-                float: left;
-                border-radius: 50%;
-                position: relative;
-                top: -4px;
               }
             }
             &:before {
               @include transition(all .5s ease);
               content: '\f068';
-              padding: 5px 6px 6px 10px;
               -webkit-transform: rotate(540deg);
               -moz-transform: rotate(540deg);
               -ms-transform: rotate(540deg);
               -o-transform: rotate(540deg);
               transform: rotate(540deg);
               background: $brand-gray;
+              padding: 2px 6px 6px 7px;
               color: #ffffff;
               font-family: FontAwesome;
-              width: 33px;
-              height: 33px;
+              width: 28px;
+              height: 28px;
               display: inline-block;
               margin-right: 10px;
-              float: left;
-              border-radius: 50%;
-              position: relative;
-              top: -4px;
 
             }
           }
           dd{
-            margin-left: 63px;
+            margin-left: 39px;
+
+            .suggested-answer{
+              padding-bottom: 20px;
+            }
           }
         }
 
