--- a/content/themes/telavice/assets/scss/_header.scss
+++ b/content/themes/telavice/assets/scss/_header.scss
@@ -18,7 +18,7 @@ header {
 
   &.on{
     position: fixed;
-    background-color: transparentize($brand-primary,.1);
+    background-color: $brand-primary;
     height: 65px;
     transform: translate(0px, 0px);
     top:0;
