--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -14,7 +14,7 @@
 
 
     @media (max-width: 1080px) {
-      background: url("/content/uploads/2017/12/online-dr-m.jpg") no-repeat center;
+      background: url("/content/uploads/2017/11/online-dr-m.jpg") no-repeat center;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -78,21 +78,23 @@
       right: 0;
       margin: -57px auto 50px auto;
       cursor:pointer;
-      z-index: 101;
+      z-index: 139;
     }
   }
   .fold-heading{
-    box-shadow: 0px 2px 14px rgba(255, 255, 255, 0.64);
-    background: $brand-primary;
+    background: $brand-lite-gray;
+    -webkit-box-shadow: 0 3px 12px rgba(47, 47, 47, 0.56);
+    -moz-box-shadow: 0 3px 12px rgba(47, 47, 47, 0.56);
+    box-shadow:  0 3px 12px rgba(47, 47, 47, 0.56);
     text-align: center;
-    color:#ffffff;
+    color:$text-color;
     padding: 20px;
     font-size: 18px;
     position: relative;
-    z-index:100;
+    z-index: 122;
 
     h2{
-      font-weight: 100;
+      color: $text-color;
     }
   }
   .heros{
@@ -151,6 +153,7 @@
       text-align: center;
       color: #ffffff;
       font-size:  3rem;
+      box-shadow: 0 3px 9px #577f96;
     }
 
     .heading{
@@ -179,7 +182,6 @@
     }
   }
   #question{
-    margin-bottom: 100px;
 
     .header{
       color: $text-color;
@@ -201,37 +203,19 @@
         margin-bottom: 9px;
       }
       .faqs{
-          dt {
-            cursor: pointer;
-            margin: 3px 0 0px 0px;
+        dt {
+          cursor: pointer;
+          margin: 3px 0 0px 0px;
 
-            &.collapsed {
-              &:before {
-                -webkit-transform: rotate(0deg);
-                -moz-transform: rotate(0deg);
-                -ms-transform: rotate(0deg);
-                -o-transform: rotate(0deg);
-                transform: rotate(0deg);
-                background: $brand-primary;
-                content: '\f067';
-                padding: 2px 6px 6px 7px;
-                color: #ffffff;
-                font-family: FontAwesome;
-                width: 28px;
-                height: 28px;
-                display: inline-block;
-                margin-right: 10px;
-              }
-            }
+          &.collapsed {
             &:before {
-              @include transition(all .5s ease);
-              content: '\f068';
-              -webkit-transform: rotate(540deg);
-              -moz-transform: rotate(540deg);
-              -ms-transform: rotate(540deg);
-              -o-transform: rotate(540deg);
-              transform: rotate(540deg);
-              background: $brand-gray;
+              -webkit-transform: rotate(0deg);
+              -moz-transform: rotate(0deg);
+              -ms-transform: rotate(0deg);
+              -o-transform: rotate(0deg);
+              transform: rotate(0deg);
+              background: $brand-primary;
+              content: '\f067';
               padding: 2px 6px 6px 7px;
               color: #ffffff;
               font-family: FontAwesome;
@@ -239,19 +223,53 @@
               height: 28px;
               display: inline-block;
               margin-right: 10px;
-
             }
           }
-          dd{
-            margin-left: 39px;
+          &:before {
+            @include transition(all .5s ease);
+            content: '\f068';
+            -webkit-transform: rotate(540deg);
+            -moz-transform: rotate(540deg);
+            -ms-transform: rotate(540deg);
+            -o-transform: rotate(540deg);
+            transform: rotate(540deg);
+            background: $brand-gray;
+            padding: 2px 6px 6px 7px;
+            color: #ffffff;
+            font-family: FontAwesome;
+            width: 28px;
+            height: 28px;
+            display: inline-block;
+            margin-right: 10px;
 
-            .suggested-answer{
-              padding-bottom: 20px;
-            }
           }
         }
+        dd{
+          margin-left: 39px;
 
+          .suggested-answer{
+            padding-bottom: 20px;
+          }
+        }
+      }
     }
 
+    .faq-form-card{
+
+      h4{
+        border:none;
+      }
+      form{
+        max-width: 500px;
+        margin: auto;
+        background: #ffffff;
+        padding: 20px;
+        border: 1px solid #e4e4e4;
+
+        .btn{
+          margin-top: 20px;
+        }
+      }
+    }
   }
 }
