Homepage redesign version 2

--- a/content/themes/telavice/assets/scss/_variables.scss
+++ b/content/themes/telavice/assets/scss/_variables.scss
@@ -1,11 +1,13 @@
 /* Core Colors */
 //$brand-primary : #106fc6;
-$brand-primary : #009FDE;
+$brand-primary : #187aab;
 $brand-accent : #2092d9;
-$brand-green: #4ecf32;
+$brand-green: #26D381;
 $brand-gray : #484848;
 $brand-lite-gray : #e7e7e7 ;
 $brand-secondary : #425563;
+
+$body-gray : #EBEBEB;
 
 /* Typography Colors */
 $text-color : #272727;
