--- a/content/themes/telavice/assets/scss/_header.scss
+++ b/content/themes/telavice/assets/scss/_header.scss
@@ -1,28 +1,18 @@
 header {
   clear: both;
-  overflow: auto;
   position: absolute;
   transform: translate(0px, 0px);
   width: 100%;
   z-index: 200;
-  height: 65px;
+  height: 72px;
   top: 0px;
+  background-color: $brand-primary;
   @include transition(all .4s ease);
 
   &.pre{
     position:absolute;
     transform: translate(0px, -50px);
     z-index: 200;
-  }
-
-
-  &.on{
-    position: fixed;
-    background-color: $brand-primary;
-    height: 65px;
-    transform: translate(0px, 0px);
-    top:0;
-    box-shadow: 0 3px 8px rgba(0,0,0,.2);
   }
   .group {
     width: 82%;
@@ -31,12 +21,16 @@ header {
       width: 70%;
     }
     .logo {
+      margin-top: 12px;
       float: left;
       cursor: pointer;
+      background: url("/images/telavice-logo-white.png") no-repeat;
 
       img{
-        width: 150px;
-        margin-top: 4px;
+        visibility:hidden;
+        width: 100%;
+        max-width: 200px;
+        margin-top: 15px;
       }
 
       .heading {
@@ -59,8 +53,17 @@ header {
     }
     .btn {
       &.green {
-        margin-top: 15px;
+        margin-top: 17px;
+        border-color:$brand-green !important;
       }
     }
+  }
+
+  &.on {
+    position: fixed;
+    height: 72px;
+    transform: translate(0px, 0px);
+    top: 0;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, .2);
   }
 }
