--- a/content/themes/telavice/assets/scss/_home.scss
+++ b/content/themes/telavice/assets/scss/_home.scss
@@ -1,275 +1,23 @@
 #home{
-  .feature{
-    margin-top: -60px;
-    padding-top: 97px;
-    background: url("/content/uploads/2017/12/online-dr1.jpg") no-repeat right center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  margin-top: 65px;
+  #feature{
+    background: $body-gray;
     width: 100%;
-    height: 885px;
-    overflow: hidden;
 
-
-
-    @media (max-width: 1080px) {
-      background: url("/content/uploads/2017/11/online-dr-m.jpg") no-repeat center;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      height: 650px;
-
-    }
     .headings{
-      width:100%;
-      float: left;
-      max-width: 600px;
-      margin-top: 99px;
-
-      @media (max-width: 1080px) {
-        margin:30px auto;
-        float: none;
-        text-align: center;
-      }
-      .prime-heading{
-        @media (max-width: 1080px) {
-          font-size: 1.9rem;
-        }
-        @media (max-width: 550px) {
-          font-size: 1.7rem;
-        }
-      }
-      .btn-go{
-        margin-top: 60px;
-
-        @media (max-width: 1080px) {
-          margin-top: 130px;
-        }
-      }
-    }
-  }
-  .img-box{
-    img{
-      width: 68%;
-      position: absolute;
-      bottom: 0px;
-      right: -173px;
-
-      @media (max-width: 1500px) {
-        width: 77%;
-        right: -307px;
-      }
-      @media (max-width: 1130px) {
-        width: 93%;
-        right: -477px
-      }
-      @media (max-width: 1080px) {
-        display: none;
-      }
-    }
-
-  }
-  .control-1{
-    img {
-      position: absolute;
-      left: 0;
-      right: 0;
-      margin: -57px auto 50px auto;
-      cursor:pointer;
-      z-index: 139;
-    }
-  }
-  .fold-heading{
-    background: $brand-lite-gray;
-    -webkit-box-shadow: 0 3px 12px rgba(47, 47, 47, 0.56);
-    -moz-box-shadow: 0 3px 12px rgba(47, 47, 47, 0.56);
-    box-shadow:  0 3px 12px rgba(47, 47, 47, 0.56);
-    text-align: center;
-    color:$text-color;
-    padding: 20px;
-    font-size: 18px;
-    position: relative;
-    z-index: 122;
-
-    h2{
-      color: $text-color;
-    }
-  }
-  .heros{
-    .service{
-      font-size: 24px;
-      text-align: center;
-
-      .price{
-        font-size: 42px;
-      }
-      .description{
-        position: relative;
-        display: inline-block;
-        top: 2px;
-        line-height: 19px;
-        text-align: left;
-        font-size: 21px;
-
-        .sub-heading{
-          display: block;
-          font-size: 14px;
-          font-weight: bold;
-          color: $text-green;
-        }
-      }
-    }
-  }
-  #online-experience{
-
-    .heading{
-      font-size: 3rem;
-      color: $dark-header;
-
-      span{
-        display: block;
-        color:$sub-text-color;
-        font-size: 1.5rem;
-      }
-    }
-    p{
-      font-size: 1.3rem;
-    }
-    img{
-      padding-top: 100px;
-      max-width: 701px;
+      width: 100%;
+      max-width: 700px;
       margin: auto;
-      display: block;
-      width:100%;
-    }
-  }
-  #treated-conditions{
 
-    .header{
-      background: $brand-primary;
-      padding: 15px;
-      text-align: center;
-      color: #ffffff;
-      font-size:  3rem;
-      box-shadow: 0 3px 9px #577f96;
-    }
-
-    .heading{
-      text-align: center;
-      color: #ffffff;
-      font-size: 2rem;
-    }
-    .box-container{
-      overflow: hidden;
-      box-shadow: 2px 3px 10px #3b3b3b;
-
-      .box{
-        width: 25%;
-        float: left;
-        color: #ffffff;
-        padding: 72px 30px;
-        text-align: center;
-
-        &:nth-child(odd){
-          @extend .main-gradient;
-        }
-        &:nth-child(even){
-          @extend .sub-gradient;
-        }
+      img{
+        max-width: 447px;
+      }
+      .sub-heading{
+        color: $text-color;
       }
     }
-  }
-  #question{
-
-    .header{
-      color: $text-color;
-      text-align: center;
-      font-size: 1.7em;
-      padding: 15px 5px 20px 5px;
-      margin-bottom: 25px;
-      background: #E7E7E7;
-      border-top: 6px solid #c5c5c5;
-    }
-    .card{
-      background-color: transparent;
-      border: none;
-      margin-bottom: 10px;
-
-      .card-header{
-        background-color: transparent;
-        padding: .75rem 1.25rem .35rem 0;
-        margin-bottom: 9px;
-      }
-      .faqs{
-        dt {
-          cursor: pointer;
-          margin: 3px 0 0px 0px;
-
-          &.collapsed {
-            &:before {
-              -webkit-transform: rotate(0deg);
-              -moz-transform: rotate(0deg);
-              -ms-transform: rotate(0deg);
-              -o-transform: rotate(0deg);
-              transform: rotate(0deg);
-              background: $brand-primary;
-              content: '\f067';
-              padding: 2px 6px 6px 7px;
-              color: #ffffff;
-              font-family: FontAwesome;
-              width: 28px;
-              height: 28px;
-              display: inline-block;
-              margin-right: 10px;
-            }
-          }
-          &:before {
-            @include transition(all .5s ease);
-            content: '\f068';
-            -webkit-transform: rotate(540deg);
-            -moz-transform: rotate(540deg);
-            -ms-transform: rotate(540deg);
-            -o-transform: rotate(540deg);
-            transform: rotate(540deg);
-            background: $brand-gray;
-            padding: 2px 6px 6px 7px;
-            color: #ffffff;
-            font-family: FontAwesome;
-            width: 28px;
-            height: 28px;
-            display: inline-block;
-            margin-right: 10px;
-
-          }
-        }
-        dd{
-          margin-left: 39px;
-
-          .suggested-answer{
-            padding-bottom: 20px;
-          }
-        }
-      }
-    }
-
-    .faq-form-card{
-
-      h4{
-        border:none;
-      }
-      form{
-        max-width: 500px;
-        margin: auto;
-        background: #ffffff;
-        padding: 20px;
-        border: 1px solid #e4e4e4;
-
-        .btn{
-          margin-top: 20px;
-        }
-      }
+    img{
+      width: 100%;
     }
   }
 }
